--- a/api/package.json
+++ b/api/package.json
@@ -1,17 +1,39 @@
 {
-  "name": "api",
+  "name": "factile-api",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "mocha test/**/*"
+    "lab": "NODE_ENV=test ./node_modules/.bin/lab -l test/",
+    "test": "npm run lab",
+    "test:watch": "nodemon --exec 'npm run lab'",
+    "lint": "./node_modules/.bin/lab -dL",
+    "lint:fix": "lab  -dL --lint-fix",
+    "test-cov-html": "./node_modules/.bin/lab -r html -o coverage.html -c --coverage-exclude test --coverage-exclude node_modules --coverage-exclude public --coverage-exclude bin",
+    "start": "node index.js"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "code": "^4.0.0",
+    "lab": "^13.0.1",
     "mocha": "^3.2.0"
   },
   "dependencies": {
-    "hapi": "^16.0.2"
+    "bluebird": "^3.5.0",
+    "boom": "^4.3.1",
+    "config": "^1.25.1",
+    "email-templates": "^2.5.4",
+    "good": "^7.1.0",
+    "good-console": "^6.4.0",
+    "good-squeeze": "^5.0.2",
+    "hapi": "^16.1.0",
+    "hapi-auth-jwt2": "^7.2.4",
+    "inert": "^4.1.0",
+    "js-yaml": "^3.8.2",
+    "lout": "^10.0.1",
+    "mongodb": "^2.2.25",
+    "request": "^2.81.0",
+    "vision": "^4.1.1"
   }
 }
