--- a/api/package.json
+++ b/api/package.json
@@ -33,6 +33,7 @@
     "js-yaml": "^3.8.2",
     "lout": "^10.0.1",
     "mongodb": "^2.2.25",
+    "oauth": "^0.9.15",
     "request": "^2.81.0",
     "vision": "^4.1.1"
   }
