--- a/web/package.json
+++ b/web/package.json
@@ -209,6 +209,7 @@
     "testRegex": "tests/.*\\.test\\.js$"
   },
   "dependencies": {
+    "axios": "^0.16.0",
     "babel-polyfill": "6.20.0",
     "chalk": "1.1.3",
     "compression": "1.6.2",
@@ -223,6 +224,7 @@
     "minimist": "1.2.0",
     "react": "15.4.1",
     "react-dom": "15.4.1",
+    "react-fontawesome": "^1.5.0",
     "react-helmet": "3.2.2",
     "react-intl": "2.1.5",
     "react-redux": "4.4.6",
